Added white storks translation

--- a/src/locales/phrasesDE.json
+++ b/src/locales/phrasesDE.json
@@ -14,5 +14,6 @@
     "streetmap": "Karte",
     "title": "Zugv\u00f6gel auf Reisen",
     "turtledoves": "Turteltauben",
-    "who": "Wer ist wer?"
+    "who": "Wer ist wer?",
+    "whitestorks": "Weißstorch"
 }
