--- a/src/locales/phrasesEN.json
+++ b/src/locales/phrasesEN.json
@@ -14,5 +14,6 @@
     "streetmap": "Map",
     "title": "Migratory birds travelling",
     "turtledoves": "Turteldoves",
-    "who": "Who is who?"
+    "who": "Who is who?",
+    "whitestorks": "White Storks"
 }
