Removed streetmap layer.

--- a/src/locales/phrasesDE.json
+++ b/src/locales/phrasesDE.json
@@ -11,7 +11,7 @@
     "nicolaFail": "Sender ist im August 2017 ausgefallen.",
     "routes": "Flugrouten",
     "satellite": "Satellit",
-    "streetmap": "Karte",
+    "osm": "Karte",
     "title": "Zugv\u00f6gel auf Reisen",
     "turtledoves": "Turteltauben",
     "who": "Wer ist wer?",
