--- a/src/locales/phrasesEN.json
+++ b/src/locales/phrasesEN.json
@@ -11,7 +11,7 @@
     "nicolaFail": "Transmitter was not operational anymore since August 2017.",
     "routes": "Flight routes",
     "satellite": "Satellite",
-    "streetmap": "Map",
+    "osm": "Map",
     "title": "Migratory birds travelling",
     "turtledoves": "Turteldoves",
     "who": "Who is who?",
