Set default daterange. Insert clear button. Update locales.

--- a/src/locales/phrasesDE.json
+++ b/src/locales/phrasesDE.json
@@ -15,5 +15,8 @@
     "title": "Zugv\u00f6gel auf Reisen",
     "turtledoves": "Turteltauben",
     "who": "Wer ist wer?",
-    "whitestorks": "Weißstorch"
+    "whitestorks": "Weißstorch",
+    "dialogOk": "OK",
+    "dialogCancel": "Abbrechen",
+    "dialogClear": "Standard"
 }
