improve performance of painting and clearing birds

--- a/src/locales/phrasesDE.json
+++ b/src/locales/phrasesDE.json
@@ -18,5 +18,5 @@
     "whitestorks": "Weißstorch",
     "dialogOk": "OK",
     "dialogCancel": "Abbrechen",
-    "dialogClear": "Standard"
+    "dialogReset": "Standard"
 }
