--- a/src/locales/phrasesEN.json
+++ b/src/locales/phrasesEN.json
@@ -18,5 +18,5 @@
     "whitestorks": "White Storks",
     "dialogOk": "OK",
     "dialogCancel": "Cancel",
-    "dialogClear": "Clear"
+    "dialogReset": "Reset"
 }
